# astra

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  settings.py
core/: __init__.py  application.py  database.py  exceptions.py  http_protocol.py  httpprotocol.py  middleware.py  request.py  response.py  router.py  routing.py  server.py  status.py  status_codes.py  websocket.py  websocket_protocol.py  websocketprotocol.py
middleware/: asyncexitstack.py  base.py  cors.py  gzip.py
middlewares/: __init__.py  base.py  cors.py  gzip.py  https_redirect.py  security.py  trusted_host.py
security/: x-xxs-protection.py
test/: app.py
tests/: test_websocket.py  test_websocket_protocol.py
tests/core/: test_application.py  test_database.py  test_http_protocol.py  test_request.py  test_response.py  test_router.py  test_server.py  test_status_codes.py  test_websocket.py  test_websocket_protocol.py
tests/middlewares/: test_base.py  test_cors.py  test_gzip.py  test_https_redirect.py  test_security.py  test_trusted_host.py
utils/: singleton.py
views/: app.py
