[tool.poetry]
name = "astra"
version = "0.1.0"
description = "Python async web framework"
authors = ["chawanghyeon <chawanghyeon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvloop = "^0.17.0"
motor = "^3.2.0"
httptools = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pyupgrade = "^3.7.0"
black = "^23.3.0"
autoflake = "^2.1.1"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.4.0"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
allow_untyped_decorators = true
pretty = true
show_error_codes = true
implicit_reexport = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true
exclude = "tests"
